<resources>
    <string name="app_name">Ceburilo</string>
    <string name="start_point_text">Punkt startowy</string>
    <string name="end_point_text">Punkt docelowy</string>
    <string name="find_route_button_text">Wyznacz trasę</string>
    <string name="title_activity_maps">Ceburilo</string>
    <string name="select_closest_button_text">Wybierz najbliższą stację</string>
    <string name="start_point_id">START_POINT_ID</string>
    <string name="end_point_id">END_POINT_ID</string>
    <string name="adowanie_danych">Ładowanie danych...</string>
    <string name="czas_jazdy">Maksymalny czas jazdy bez przesiadki</string>
    <string name="permission_message">Do poprawnego działania aplikacji wymagane jest użycie lokalizacji</string>
    <string name="start_end_point_message">Trasa nie może zaczynać się i kończyć w tym samym punkcie</string>
    <string name="dystans">Dystans:</string>
    <string name="czas_przejazdu">Czas przejazdu:</string>
    <string name="processing">Processing ...</string>
    <string name="time_left">Czas do przesiadki:</string>
    <string name="end_of_time">Koniec czasu!</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
</resources>
