<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.legec.ceburilo.MapsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/distanceTV"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/dystans"
                android:textSize="18sp"
                android:gravity="left|center"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:id="@+id/durationTV"
                android:layout_width="match_parent"
                android:layout_height="0px"
                android:layout_weight="1"
                android:text="@string/czas_przejazdu"
                android:textSize="18sp"
                android:gravity="left|center"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="left|center">
                <TextView
                    android:id="@+id/timeLeftTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/time_left"
                    android:textSize="18sp"
                    android:gravity="left|center"
                    android:textColor="@color/colorPrimaryDark"/>

                <Button
                    android:id="@+id/startStopButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Start"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="7"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressbar_view"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:alpha="0.5"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/processing"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#C0C0C0" />
    </LinearLayout>

</RelativeLayout>